tests for rootStore, dataStore and uiStore to heck availabe properties, test pass

--- a/package.json
+++ b/package.json
@@ -50,5 +50,17 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "testRegex": "(/tests/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ]
+  },
   "homepage": "https://github.com/donatoivan/fizz-buzz-woof-game#readme"
 }
